--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4 2019-02-05 18:31:00   232.0     9.3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4                                           00:06:14                                           "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "4 2019-02-05 18:31:00     0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4704,7 +4704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -8880,7 +8880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -8906,7 +8906,7 @@
        " dtype: int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8954,7 +8954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -8963,7 +8963,7 @@
        "((1639, 4), (1639, 4))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8974,7 +8974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -13140,7 +13140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -17306,7 +17306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17333,7 +17333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -17344,7 +17344,7 @@
        },
        "data": [
         {
-         "hovertemplate": "variable=Viento<br>index=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Viento<br>Fecha=%{x}<br>Valores Normalizados=%{y}<extra></extra>",
          "legendgroup": "Viento",
          "line": {
           "color": "#636efa",
@@ -17359,49 +17359,49 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19,
-          20,
-          21,
-          22,
-          23,
-          24,
-          25,
-          26,
-          27,
-          28,
-          29,
-          30,
-          31,
-          32,
-          33,
-          34,
-          35,
-          36,
-          37,
-          38,
-          39,
-          40,
-          41,
-          42
+          "2023-07-01T00:00:00",
+          "2023-06-01T00:00:00",
+          "2023-05-01T00:00:00",
+          "2023-04-01T00:00:00",
+          "2023-03-01T00:00:00",
+          "2023-02-01T00:00:00",
+          "2023-01-01T00:00:00",
+          "2022-12-01T00:00:00",
+          "2022-11-01T00:00:00",
+          "2022-10-01T00:00:00",
+          "2022-09-01T00:00:00",
+          "2022-08-01T00:00:00",
+          "2022-07-01T00:00:00",
+          "2022-06-01T00:00:00",
+          "2022-05-01T00:00:00",
+          "2022-04-01T00:00:00",
+          "2022-03-01T00:00:00",
+          "2022-02-01T00:00:00",
+          "2022-01-01T00:00:00",
+          "2021-12-01T00:00:00",
+          "2021-11-01T00:00:00",
+          "2021-10-01T00:00:00",
+          "2021-09-01T00:00:00",
+          "2021-08-01T00:00:00",
+          "2021-07-01T00:00:00",
+          "2021-06-01T00:00:00",
+          "2021-05-01T00:00:00",
+          "2021-04-01T00:00:00",
+          "2021-03-01T00:00:00",
+          "2021-02-01T00:00:00",
+          "2021-01-01T00:00:00",
+          "2020-12-01T00:00:00",
+          "2020-11-01T00:00:00",
+          "2020-10-01T00:00:00",
+          "2020-09-01T00:00:00",
+          "2020-08-01T00:00:00",
+          "2020-07-01T00:00:00",
+          "2020-06-01T00:00:00",
+          "2020-05-01T00:00:00",
+          "2020-04-01T00:00:00",
+          "2020-03-01T00:00:00",
+          "2020-02-01T00:00:00",
+          "2020-01-01T00:00:00"
          ],
          "xaxis": "x",
          "y": [
@@ -17452,7 +17452,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "variable=Lluvia<br>index=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Lluvia<br>Fecha=%{x}<br>Valores Normalizados=%{y}<extra></extra>",
          "legendgroup": "Lluvia",
          "line": {
           "color": "#EF553B",
@@ -17467,49 +17467,49 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19,
-          20,
-          21,
-          22,
-          23,
-          24,
-          25,
-          26,
-          27,
-          28,
-          29,
-          30,
-          31,
-          32,
-          33,
-          34,
-          35,
-          36,
-          37,
-          38,
-          39,
-          40,
-          41,
-          42
+          "2023-07-01T00:00:00",
+          "2023-06-01T00:00:00",
+          "2023-05-01T00:00:00",
+          "2023-04-01T00:00:00",
+          "2023-03-01T00:00:00",
+          "2023-02-01T00:00:00",
+          "2023-01-01T00:00:00",
+          "2022-12-01T00:00:00",
+          "2022-11-01T00:00:00",
+          "2022-10-01T00:00:00",
+          "2022-09-01T00:00:00",
+          "2022-08-01T00:00:00",
+          "2022-07-01T00:00:00",
+          "2022-06-01T00:00:00",
+          "2022-05-01T00:00:00",
+          "2022-04-01T00:00:00",
+          "2022-03-01T00:00:00",
+          "2022-02-01T00:00:00",
+          "2022-01-01T00:00:00",
+          "2021-12-01T00:00:00",
+          "2021-11-01T00:00:00",
+          "2021-10-01T00:00:00",
+          "2021-09-01T00:00:00",
+          "2021-08-01T00:00:00",
+          "2021-07-01T00:00:00",
+          "2021-06-01T00:00:00",
+          "2021-05-01T00:00:00",
+          "2021-04-01T00:00:00",
+          "2021-03-01T00:00:00",
+          "2021-02-01T00:00:00",
+          "2021-01-01T00:00:00",
+          "2020-12-01T00:00:00",
+          "2020-11-01T00:00:00",
+          "2020-10-01T00:00:00",
+          "2020-09-01T00:00:00",
+          "2020-08-01T00:00:00",
+          "2020-07-01T00:00:00",
+          "2020-06-01T00:00:00",
+          "2020-05-01T00:00:00",
+          "2020-04-01T00:00:00",
+          "2020-03-01T00:00:00",
+          "2020-02-01T00:00:00",
+          "2020-01-01T00:00:00"
          ],
          "xaxis": "x",
          "y": [
@@ -17560,7 +17560,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "variable=Número total de llamadas recibidas por mes (NLLR)<br>index=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Número total de llamadas recibidas por mes (NLLR)<br>Fecha=%{x}<br>Valores Normalizados=%{y}<extra></extra>",
          "legendgroup": "Número total de llamadas recibidas por mes (NLLR)",
          "line": {
           "color": "#00cc96",
@@ -17575,49 +17575,49 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19,
-          20,
-          21,
-          22,
-          23,
-          24,
-          25,
-          26,
-          27,
-          28,
-          29,
-          30,
-          31,
-          32,
-          33,
-          34,
-          35,
-          36,
-          37,
-          38,
-          39,
-          40,
-          41,
-          42
+          "2023-07-01T00:00:00",
+          "2023-06-01T00:00:00",
+          "2023-05-01T00:00:00",
+          "2023-04-01T00:00:00",
+          "2023-03-01T00:00:00",
+          "2023-02-01T00:00:00",
+          "2023-01-01T00:00:00",
+          "2022-12-01T00:00:00",
+          "2022-11-01T00:00:00",
+          "2022-10-01T00:00:00",
+          "2022-09-01T00:00:00",
+          "2022-08-01T00:00:00",
+          "2022-07-01T00:00:00",
+          "2022-06-01T00:00:00",
+          "2022-05-01T00:00:00",
+          "2022-04-01T00:00:00",
+          "2022-03-01T00:00:00",
+          "2022-02-01T00:00:00",
+          "2022-01-01T00:00:00",
+          "2021-12-01T00:00:00",
+          "2021-11-01T00:00:00",
+          "2021-10-01T00:00:00",
+          "2021-09-01T00:00:00",
+          "2021-08-01T00:00:00",
+          "2021-07-01T00:00:00",
+          "2021-06-01T00:00:00",
+          "2021-05-01T00:00:00",
+          "2021-04-01T00:00:00",
+          "2021-03-01T00:00:00",
+          "2021-02-01T00:00:00",
+          "2021-01-01T00:00:00",
+          "2020-12-01T00:00:00",
+          "2020-11-01T00:00:00",
+          "2020-10-01T00:00:00",
+          "2020-09-01T00:00:00",
+          "2020-08-01T00:00:00",
+          "2020-07-01T00:00:00",
+          "2020-06-01T00:00:00",
+          "2020-05-01T00:00:00",
+          "2020-04-01T00:00:00",
+          "2020-03-01T00:00:00",
+          "2020-02-01T00:00:00",
+          "2020-01-01T00:00:00"
          ],
          "xaxis": "x",
          "y": [
@@ -18501,7 +18501,7 @@
           1
          ],
          "title": {
-          "text": "index"
+          "text": "Fecha"
          }
         },
         "yaxis": {
@@ -18511,7 +18511,7 @@
           1
          ],
          "title": {
-          "text": "value"
+          "text": "Valores Normalizados"
          }
         }
        }
@@ -18556,11 +18556,13 @@
     "\n",
     "cols = plot_df.columns\n",
     "scaler = MinMaxScaler(feature_range=(0,1))\n",
+    "indexes = plot_df.index\n",
     "plot_df = pd.DataFrame(scaler.fit_transform(plot_df), columns=cols)\n",
     "\n",
     "# Plotting using plotly.express\n",
-    "fig = px.line(plot_df, x=plot_df.index, y=['Viento', 'Lluvia',  'Número total de llamadas recibidas por mes (NLLR)'],\n",
-    "              title='Interacción Viento/Lluvia en Llamados por mes'\n",
+    "fig = px.line(plot_df, x=indexes, y=['Viento', 'Lluvia',  'Número total de llamadas recibidas por mes (NLLR)'],\n",
+    "              title='Interacción Viento/Lluvia en Llamados por mes',\n",
+    "              labels={'value': 'Valores Normalizados', 'x': 'Fecha'}\n",
     "              )\n",
     "\n",
     "fig.show()"
@@ -18568,17 +18570,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.write_image(\"llamadosvientolluvia.png\", engine=\"kaleido\", width=1370, height=768)\n",
+    "fig.write_image(\"llamadosvientolluvia.png\", engine=\"kaleido\", width=1920, height=600)\n",
     "#fig.to_image(format=\"png\", width=600, height=350, scale=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
